--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title : archives
-header : all archives
+title : Archives
+header : all Archives
 group: navigation
 ---
 {% include JB/setup %}
