--- a/404.html
+++ b/404.html
@@ -1,1 +1,25 @@
-Sorry this page does not exist =(
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>iu-model | rc model world - Error 404 - Page not found !</title>
+        <meta name="robots" content="noindex" />
+        <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700,300italic' rel='stylesheet' type='text/css'>
+        <style>
+            a{
+                color:#9682bd;
+                text-decoration:none;
+            }
+
+            a:hover{
+                color:#574380;
+                text-decoration:none;
+            }
+        </style>
+    </head>
+    <body bgcolor="#b7bac3" style="margin:0 auto;font-family:'Ubuntu', sans-serif;">
+        <div id="error" style="width:100%;height:1200px;background:url(../images/404.png) no-repeat center;"></div>
+        <p style="color:#8f929d;font-weight:bold;text-shadow:0 1px 1px #fff;text-align:center;margin-top:-100px;">... OR SIMPLY GO BACK TO THE <a href="http://iu-model.github.io/">HOME PAGE</a></p>
+    </body>
+</html>
