--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
         </style>
     </head>
     <body bgcolor="#b7bac3" style="margin:0 auto;font-family:'Ubuntu', sans-serif;">
-        <div id="error" style="width:100%;height:1200px;background:url(../images/404.png) no-repeat center;"></div>
+        <div id="error" style="width:100%;height:1200px;background:url(./images/404.png) no-repeat center;"></div>
         <p style="color:#8f929d;font-weight:bold;text-shadow:0 1px 1px #fff;text-align:center;margin-top:-100px;">... OR SIMPLY GO BACK TO THE <a href="http://iu-model.github.io/">HOME PAGE</a></p>
     </body>
 </html>
