--- a/pages.html
+++ b/pages.html
@@ -6,7 +6,7 @@ group: navigation
 ---
 {% include JB/setup %}
 <div class = "card">
-	<h2>快速入口</h2>
+	<h2>Fast Entry</h2>
 	<ul>
 	{% assign pages_list = site.pages %}
 	{% include JB/pages_list %}
