--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title : Archives
-header : all Archives
+title : 文章
+header : 所有文章
 group: navigation
 ---
 {% include JB/setup %}
