--- a/categories.html
+++ b/categories.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Categories
+title: 分类
 header: Posts By Category
 group: navigation
 ---
@@ -10,17 +10,17 @@ group: navigation
   {% assign categories_list = site.categories %}
   {% include JB/categories_list %}
 </ul>
-<hr>
+
 
 
 {% for category in site.categories %} 
 <div class = "card">
-  <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
+  <h2 id="{{ category[0] }}-ref" class="hat_title">{{ category[0] | join: "/" }}</h2>
   <ul>
     {% assign pages_list = category[1] %}  
     {% include JB/pages_list %}
   </ul>
 </div>
-<hr>
+
 {% endfor %}
 
