--- a/pages.html
+++ b/pages.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Pages 
+title: 页面 
 header: Pages
 group: navigation
 ---
 {% include JB/setup %}
 <div class = "card">
-	<h2>Fast Entry</h2>
+	<h2 class="hat_title">快速入口</h2>
 	<ul>
 	{% assign pages_list = site.pages %}
 	{% include JB/pages_list %}
